<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/acerca_de" android:title="@string/acerca_de"
        android:orderInCategory="100" app:showAsAction="never"
        android:icon="@drawable/iconacerca"/>

    <item android:id="@+id/GaleriaImagenes" android:title="@string/ImagenGaleria"
        android:orderInCategory="100" app:showAsAction="never"
        android:icon="@drawable/iconsalir"
        />
    <item
        android:id="@+id/ComoLlegar"
        android:icon="@drawable/iconsalir"
        android:orderInCategory="100"
        android:title="@string/Mini" />
    <item android:id="@+id/salir" android:title="@string/salir"
        android:orderInCategory="100" app:showAsAction="never"
        android:icon="@drawable/iconsalir"
        />



</menu>
