<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lapaznoche"
    tools:context="com.example.usuario.tourlapaz.RegistroActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#4c544c"
        android:alpha="0.3"
        >

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:id="@+id/logotour"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/logolapaz"
            android:layout_marginTop="0dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="170dp">
        <EditText
            android:id="@+id/NombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:hint="@string/NombreCompleto"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:background="#9c1d1d1e"/>
        <EditText
            android:id="@+id/IngreseUsuario"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:hint="@string/correo"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:background="#9c1d1d1e"/>

        <EditText
            android:id="@+id/Contraseña"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:background="#9c1c1c1d"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/ContraseñaDos"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:hint="@string/ContraseñaDos"
            android:inputType="textPassword"
            android:background="#9c1c1c1d"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:textSize="18sp"/>


            <Button
                android:id="@+id/Registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="#9c1e1e1e"
                android:text="@string/Registrarse"
                android:textColor="#fff" />



    </LinearLayout>

</RelativeLayout>
