<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lapaznoche"
    android:orientation="vertical"
    tools:context="com.example.usuario.tourlapaz.LlegarActivity"
    >
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#9c1c1c1d"
        android:text="@string/TomarMini"
        android:textColor="@color/colorLetra"
        android:textSize="30sp"

        />
    <LinearLayout
        android:id="@+id/Mini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/iconmini"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/InfoMini"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="InfoMini"
                android:textColor="@color/colorLetra"
                android:textSize="20sp"
                />
        </LinearLayout>


    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TomarTaxi"
        android:background="#9c1c1c1d"
        android:textColor="@color/colorLetra"
        android:textSize="20sp"

    />
    <LinearLayout
        android:id="@+id/LlamarTaxi1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/iconllamar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Taxi1"
                android:textColor="@color/colorLetra"
                android:textSize="20sp"
                />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/LlamarTaxi2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/iconllamar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Taxi2"
                android:textColor="@color/colorLetra"
                android:textSize="20sp"
                />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/LlamarTaxi3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/iconllamar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Taxi3"
                android:textColor="@color/colorLetra"
                android:textSize="20sp"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
