<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/lapaznoche"
    tools:context="com.example.usuario.tourlapaz.AcercaActivity">
    <ImageView
        android:id="@+id/imagen_acerca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/studyjamicon" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#9c3b3939">
    <TextView
        android:id="@+id/id_study"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Study Jam - Android Development for Beginners"
        android:textSize="20sp"
        android:textColor="#ffff"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/id_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Ronnie Bryan Gutierrez Marca"
        android:textSize="30sp"
        android:textColor="#ffff"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/id_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/InfoApp"
        android:textSize="20sp"
        android:textColor="#ffff"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/EnviaOpinion"
        android:textSize="13sp"
        android:layout_gravity="center"
        android:layout_marginLeft="28dp"
        android:textColor="#ffff"
        android:background="#9cac1424"
        />
        <Button
        android:id="@+id/Llamada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Comunica"
        android:textSize="13sp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:textColor="#ffff"
        android:background="#9cac1424"
        />
    </LinearLayout>

    </LinearLayout>


</LinearLayout>
